loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-loadbalancer
  namespace: nginx-ingress
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: my-nginx-ingress-controller
---
apiVersion: v1
kind: Service
metadata:
  name: nginx2-ingress-loadbalancer
  namespace: nginx-ingress
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: nginx2
