tls-passthrough-complete-application.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tls-passthrough-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tls-passthrough-app
  namespace: tls-passthrough-app
  labels:
    app: tls-passthrough-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tls-passthrough-app
  template:
    metadata:
      labels:
        app: tls-passthrough-app
    spec:
      containers:
      - name: tls-passthrough-app
        image: jgoodier/nginx-hello:ssl
        ports:
          - containerPort: 8443
            protocol: TCP
        resources: {}
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tls-passthrough-app
  namespace: tls-passthrough-app
spec:
  ports:
    - name: tls-passthrough-app
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: tls-passthrough-app
  type: ClusterIP
