transportServer-tls-passthrough-complete-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: transportserver-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transportserver-app
  namespace: transportserver-app
  labels:
    app: transportserver-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transportserver-app
  template:
    metadata:
      labels:
        app: transportserver-app
    spec:
      containers:
      - name: transportserver-app
        image: nginxinc/nginx-unprivileged
        ports:
          - containerPort: 8443
            protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: "100Mi"
          requests:
            cpu: "0.01"
            memory: "20Mi"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: default-conf
          readOnly: true
        - mountPath: /etc/nginx/ssl
          name: secrets-volume          
      volumes:
      - name: default-conf
        configMap:
          name: nginx-echo
          items:
            - key: default.conf
              path: default.conf
      - name: secrets-volume
        secret:
           secretName: tls-certs              
---
apiVersion: v1
kind: Service
metadata:
  name: transportserver-app
  namespace: transportserver-app
spec:
  ports:
    - name: transportserver-app
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: transportserver-app
  type: ClusterIP
