virtualServerRoute-complete-app.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: virtualserverroute-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtualserverroute-app
  namespace: virtualserverroute-app
  labels:
    app: virtualserverroute-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: virtualserverroute-app
  template:
    metadata:
      labels:
        app: virtualserverroute-app
    spec:
      containers:
      - name: virtualserverroute-app
        image: nginxinc/nginx-unprivileged
        ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8081
            protocol: TCP
          - containerPort: 8082
            protocol: TCP                        
        resources:
          limits:
            cpu: "1"
            memory: "100Mi"
          requests:
            cpu: "0.1"
            memory: "20Mi"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: default-conf
          readOnly: true
      volumes:
      - name: default-conf
        configMap:
          name: nginx-echo
          items:
            - key: default.conf
              path: default.conf
            - key: tea.conf
              path: tea.conf
            - key: beer.conf
              path: beer.conf              
---
apiVersion: v1
kind: Service
metadata:
  name: items-svc
  namespace: virtualserverroute-app
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: virtualserverroute-app
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: beer-svc
  namespace: virtualserverroute-app
spec:
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: virtualserverroute-app
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
  namespace: virtualserverroute-app
spec:
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  selector:
    app: virtualserverroute-app
  type: ClusterIP
