virtualServerRoute-complete-application.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: virtualserverroute-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtualserverroute-app
  namespace: virtualserverroute-app
  labels:
    app: virtualserverroute-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: virtualserverroute-app
  template:
    metadata:
      labels:
        app: virtualserverroute-app
    spec:
      containers:
      - name: virtualserverroute-app
        image: jgoodier/nginx-hello:plaintext
        ports:
          - containerPort: 80
            protocol: TCP
        resources: {}
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: virtualserverroute-app
  namespace: virtualserverroute-app
spec:
  ports:
    - name: virtualserverroute-app
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: virtualserverroute-app
  type: ClusterIP
