complete-application-http.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: http-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-app
  namespace: http-app
  labels:
    app: http-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-app
  template:
    metadata:
      labels:
        app: http-app
    spec:
      containers:
      - name: http-app
        image: jgoodier/nginx-hello:plaintext
        ports:
          - containerPort: 80
            protocol: TCP
        resources: {}
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: http-app
  namespace: http-app
spec:
  ports:
    - name: http-app
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: http-app
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: http-app
  name: http-app
spec:
  ingressClassName: nginx
  rules:
  - host: http.kicapps.nginx.rocks
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-app
            port:
              number: 80
---
