complete-application-https.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: https-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: https-app
  namespace: https-app
  labels:
    app: https-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: https-app
  template:
    metadata:
      labels:
        app: https-app
    spec:
      containers:
      - name: https-app
        image: jgoodier/nginx-hello:ssl
        ports:
          - containerPort: 8443
            protocol: TCP
        resources: {}
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: https-app
  namespace: https-app
spec:
  ports:
    - name: https-app
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: https-app
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/ssl-services: "https-app"
  namespace: https-app
  name: https-app
spec:
  ingressClassName: nginx
  rules:
  - host: https.kicapps.nginx.rocks
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: https-app
            port:
              number: 8443
