ingress-complete-application.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-app
  namespace: ingress-app
  labels:
    app: ingress-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-app
  template:
    metadata:
      labels:
        app: ingress-app
    spec:
      containers:
      - name: ingress-app
        image: jgoodier/nginx-hello:plaintext
        ports:
          - containerPort: 80
            protocol: TCP
        resources: {}
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-app
  namespace: ingress-app
spec:
  ports:
    - name: ingress-app
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: ingress-app
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ingress-app
  name: ingress-app
# if backend is SSL:  
#   annotations:
#     nginx.org/ssl-services: "ingress-app"  
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.nginx1.nginx.rocks
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-app
            port:
              number: 80
